--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@react-navigation/bottom-tabs": "^7.3.11",
+    "@react-navigation/native": "^7.1.7",
+    "@react-navigation/stack": "^7.3.0",
+    "@reduxjs/toolkit": "^2.7.0",
     "expo": "~53.0.6",
+    "expo-font": "^13.3.1",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.6.1",
+    "i18next": "^25.1.2",
+    "moment": "^2.30.1",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-hook-form": "^7.56.2",
+    "react-i18next": "^15.5.1",
+    "react-native": "0.79.2",
+    "react-native-actions-sheet": "^0.9.7",
+    "react-native-flash-message": "^0.4.2",
+    "react-native-gesture-handler": "~2.25.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
