--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-navigation/bottom-tabs": "^7.3.11",
-    "@react-navigation/native": "^7.1.7",
-    "@react-navigation/stack": "^7.3.0",
-    "@reduxjs/toolkit": "^2.7.0",
-    "expo": "~53.0.6",
-    "expo-font": "^13.3.1",
-    "expo-status-bar": "~2.2.3",
-    "firebase": "^11.6.1",
-    "i18next": "^25.1.2",
+    "@hookform/resolvers": "^3.10.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "expo": "~52.0.46",
+    "expo-font": "~13.0.4",
+    "expo-status-bar": "~2.0.0",
+    "firebase": "^11.2.0",
+    "i18next": "^24.2.2",
     "moment": "^2.30.1",
-    "react": "19.0.0",
-    "react-hook-form": "^7.56.2",
-    "react-i18next": "^15.5.1",
-    "react-native": "0.79.2",
+    "react": "18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
+    "react-native": "0.76.9",
     "react-native-actions-sheet": "^0.9.7",
     "react-native-flash-message": "^0.4.2",
-    "react-native-gesture-handler": "~2.25.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-size-matters": "^0.4.2",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
